chapiter 4 started and contining need to add table for results

--- a/Text/abreviation.tex
+++ b/Text/abreviation.tex
@@ -16,4 +16,8 @@
 \acro{EXETAT}{EXamen d'ETAT}
 \acro{DM}{Données Manquantes}
 \acro{CGPA}{Cumulative Grade Point Average }
+\acro{SVR}{Support Vector Regressor }
+\acro{SVM}{Support Vector Machines }
+\acro{RMSE}{Root Mean Square Error }
+\acro{LOOCV}{Leave One Out Cross-Validation }
 \end{acronym}
