--- a/bib/litterature.bib
+++ b/bib/litterature.bib
@@ -272,5 +272,27 @@ pages      =  {10},
 	title = {Fuzzy Group By, Grouping Similar Words},
 	date = {12-07-2012},
 	url={https://stackoverflow.com/questions/11535483/fuzzy-group-by-grouping-similar-words},
-	note = {Answer To StackOverflow question },
+	note = {Answer To StackOverflow question }
+}
+@online{OneHotEncoding,
+	author = {Rapaio P.},
+	editor = {Stack Exchange},
+	title = {Strings as features in decision tree/random forest},
+	date = {25-05-2015},
+	url={https://datascience.stackexchange.com/a/5229/30464},
+	note = {Answer To datascience stack-exchange  question }
+}
+
+@book{ProbaStat,
+	author    =  {Prasanna S. },
+	title      =  {Probability And Mathemathical  Statistics},
+	year        =  {2005},
+	publisher={Department of Mathematics, University of Louisville},
+	location={Louisville, KY 40292 USA}
+}
+@phdthesis{CrossValidation,
+	title={Probability bounds for the cross-validation estimate in the context of the statistical learning theory and statistical models applied to economics and finance},
+	author={Cornec, Matthieu},
+	year={2009},
+	school={Université de Nanterre-Paris X}
 }
