--- a/text/chapter3.tex
+++ b/text/chapter3.tex
@@ -914,7 +914,7 @@ Nos allons représenter les résultats su des divers tableaux dans les pages qui
 				
 				AGE   & Pearson-Corr & -0.03 P=6 10e-5 & Pas de relation avec Le CGPA &  le coefficient étant inférieur à  0.5 conclu qu'il n'ya pas de corrélation considérable , et comme le coefficient est négatif la corrélation es inverse\\
 				
-				SEXE   & ANOVA 1-way & 0.081204 & >0.05 la moyenne du CGPA est la même Pour les hommes que pour les femmes  . Mais la faculté est plus maculine avec 85\% des Hommes et 15\% des Femmes de& le sexe n'as pas une influence considérable sur le CGPA bien que les filles ont des résultats légèrement meilleur  que les garçons en Faculté de médecine surtout en terme des distinctions \\
+				SEXE   & ANOVA 1-way & 0.081204 & >0.05 la moyenne du CGPA est la même Pour les hommes que pour les femmes  . Mais la faculté est plus maculine avec 85\% des Hommes et 15\% des Femmes de& le sexe n'as pas une influence considérable sur le CGPA en faculté de technologie appliquée , les deux catégories ont presque la même moyenne \\
 				
 				PROVINCE   & ANOVA 1-way &0.07731&> à 0.05  On n'accepte pas H0 Automatiquement , Certaines catégories on la même Moyenne &  après analyse graphique on conclu Rapidement que les étudiants provenant de la province du sud Kivu sont plus performant en faculté de Technologie\\
 				
@@ -947,7 +947,7 @@ Nos allons représenter les résultats su des divers tableaux dans les pages qui
 				 
 				SEXE   & ANOVA 1-way & 0.585536 & >0.05 la moyenne du CGPA est la même Pour les hommes que pour les femmes. La faculté a 54\% des Hommes et 46\% des Femmes & le sexe n'as pas une influence considérable sur le CGPA . Les deux catégorie ont une même moyenne\\
 				 
-				PROVINCE   & ANOVA 1-way &0.07731&> à 0.05  On n'accepte pas H0 Automatiquement , Certaines catégories on la même Moyenne &  après analyse graphique on conclu Rapidement que les étudiants provenant de la province du Nord Kivu sont plus performant en faculté d'economie , ensuite vient la province du Sud-Kivu, en bas de l'échelle nous trouvons la province du Kasai\\
+				PROVINCE   & ANOVA 1-way &0.07731&> à 0.05  On n'accepte pas H0 Automatiquement , Certaines catégories on la même Moyenne &  après analyse graphique on conclu Rapidement que les étudiants provenant de la province du Nord Kivu sont plus performant en faculté d'économie , ensuite vient la province du Sud-Kivu, en bas de l'échelle nous trouvons la province du Kasai\\
 				 
 				STATUS   & ANOVA 1-way & 2.21e-13&< à 0.05  rejet de Ho les moyenne ne sont pas les même au sein de chaque catégorie & Nous remarquons que les étudiant venant des écoles catholiques  réussissent mieux en faculté d'économie, ensuite les autodidacte ,ensuite ceux des écoles protestantes\\
 				 
@@ -982,7 +982,7 @@ Nos allons représenter les résultats su des divers tableaux dans les pages qui
 				 
 				STATUS   & ANOVA 1-way &	1.20e-08& >0.05 la moyenne pour les différentes statut n'est pas la même  &  Nous remarquons que les celles étudiants qui distinguent c'est ceux provenant des écoles protestants et catholiques, en queue de la liste se trouve les autodidacte\\
 				 
-				SCHOOL & ANOVA 1-way &2.5e-10& < 0.05 la moyenne n'est pas la même  & CGPA dépend de cette valeurs car certains écoles échouent lamentablement d'autres pas\\
+				SCHOOL & ANOVA 1-way &2.5e-10& < 0.05 la moyenne n'est pas la même  & CGPA dépend de cette valeur car certains écoles échouent lamentablement d'autres pas\\
 				 
 				OPTION &ANOVA 1-way &7.25e-10&  < 0.05 la moyenne n'est pas la même  & Voila comme on pourrait s'y attendre l'option latin philo est en tête de liste les options commerciale , pédagogie , sociale , math-physique ,mec sont en bas de l'échelle \\
 				 
