finshing report about algorithms results need to write chapiter 4 conclusion to conclude the chapiter , and to test new instance to finish the job

--- a/memoire.tex
+++ b/memoire.tex
@@ -42,7 +42,7 @@ top=2.5cm,right=2.5cm,bottom=2.5cm]{geometry}
 \newcolumntype{H}{>{\leavevmode\ignorespaces\raggedright\arraybackslash\rmfamily}X}%
 \newcolumntype{J}{>{\leavevmode\ignorespaces\rmfamily}X}%
 \newcolumntype{W}{>{\leavevmode\ignorespaces\raggedleft\arraybackslash\rmfamily}X}%
-\rowcolors{2}{blue!05}{skyblue!05}
+%\rowcolors{2}{blue!05}{skyblue!05}
 \bibliography{bib/litterature.bib}{}
 \addbibresource{bib/litterature.bib}\newpage\cleardoublepage
 \begin{document}
