--- a/text/chapter4.tex
+++ b/text/chapter4.tex
@@ -92,27 +92,134 @@ La validation croisée (« cross-validation ») est une méthode d’estimation 
 Tous au long de ce chapitre nous avions utilisé les 2 premières techniques , nous n'avions pas utiliser le 3 ème car elle est trop gourmande  en terme de ressource(temps et mémoire) 
 
 Nous pouvons maintenant attaquer l'entrainement des modèles au sein de chaque faculté  :
-\subsubsection{Résultat des différents algorithmes par faculté}
+\subsection{Résultat des différents algorithmes par faculté}
 Le tableau qui va suivre décrira les différentes algorithmes que nous avions entrainer pour les données de chaque faculté , chaque modèles dispose des paramètres ainsi que des différentes erreurs.
-
-\begin{figure}
-	\centering
-	\begin{tabular}{|l|l|l|l|}\hline
-		\multirow{10}{*}{numeric literals} & \multirow{5}{*}{integers} & in decimal & \verb|8743| \\ \cline{3-4}
-		& & \multirow{2}{*}{in octal} & \verb|0o7464| \\ \cline{4-4}
-		& & & \verb|0O103| \\ \cline{3-4}
-		& & \multirow{2}{*}{in hexadecimal} & \verb|0x5A0FF| \\ \cline{4-4}
-		& & & \verb|0xE0F2| \\ \cline{2-4}
-		& \multirow{5}{*}{fractionals} & \multirow{5}{*}{in decimal} & \verb|140.58| \\ \cline{4-4}
-		& & & \verb|8.04e7| \\ \cline{4-4}
-		& & & \verb|0.347E+12| \\ \cline{4-4}
-		& & & \verb|5.47E-12| \\ \cline{4-4}
-		& & & \verb|47e22| \\ \cline{1-4}
-		\multicolumn{3}{|l|}{\multirow{3}{*}{char literals}} & \verb|'H'| \\ \cline{4-4}
-		\multicolumn{3}{|l|}{} & \verb|'\n'| \\ \cline{4-4}          %% here
-		\multicolumn{3}{|l|}{} & \verb|'\x65'| \\ \cline{1-4}        %% here
-		\multicolumn{3}{|l|}{\multirow{2}{*}{string literals}} & \verb|"bom dia"| \\ \cline{4-4}
-		\multicolumn{3}{|l|}{} & \verb|"ouro preto\nmg"| \\ \cline{1-4}          %% here
-	\end{tabular}
-\end{figure}
-
+ \newpage
+\begin{table} [!htbp]
+	\begingroup % make the next setting local
+	\captionsetup{type=table} % here we want to caption a table
+	\caption{Résultat des Algorithmes }
+	\label{tab:AlgoResults}
+	\noindent
+	{\resizebox*{\textwidth}{\textheight}{%
+			\renewcommand{\arraystretch}{2}
+	\begin{tabular}{|c|c|c|c|c|c|c|c|}
+		\toprule
+		\multirow{6}{*}{} Faculté & Dimensions &Modèle&Paramètres &RMSE Train &\multicolumn{2}{c|}{CV Score}&RMSE Test  \\
+		\cline{6-7}
+		&&&&&M&std& \\
+		\cline{1-8}
+		\hline
+		&&Ridge&alpha=1 , solver=cholesky &0.047:8\%&0.064:11\%&0.01&0.066:11.42\% \\
+		&&Lasso&${\alpha}$=1e-05,iIter=10000&0.040 :  7.04\%&0.0640 :11.11\%&0.008& 0.068 : 11.93\%\\
+		\cline{3-8}
+		Médecine&{242 x 111 }&Elastic Net&${\alpha}$=1e-05, Iter=10000, l1Ratio=1&0.040 : 7.04\%&0.0641:11.115\%&0.0089&0.069 :11.97\% \\
+		\cline{3-8}
+		&&LinearSVR&Kernel=Linear&0.044:7.7\%&0.066:11\%&0.01& 0.08 : 13\%\\
+		\cline{3-8}
+		&&RbfSVR&Kernel = Gaussian&0.06788 :  11.76\%&0.0712:12.35\%&0.0084&0.062 : 10.74\% \\
+		\cline{1-8}
+		\hline
+		\multirow{5}{*}{}
+		&&Elastic Net&${\alpha}$=1e-05,Iter=10000,l1Ratio=1&0.078 :14.2\%&0.080 :14.54\%&0.0067& 0.078 : 14.21\%\\
+		\cline{3-8}
+		&&Lasso&${\alpha}$=1e-05,iIter=10000&0.0784 : 14.15\%&0.080 :14.49\%& 0.006&0.0784 : 14.15\% \\
+		\cline{3-8}
+		Technologie&{903x240}&Ridge&${\alpha}$=1 ,solver=cholesky&0.076 :13.83\% &0.07732 : 13.95\%&0.0066&0.076: 13.83\% \\
+		\cline{3-8}
+		&&LinearSVR&kernel=linear&0.0774 : 13.97\%&0.081:14.75\%&0.006& 0.077 :13.97\%\\
+		\cline{3-8}
+		&&RbfSVR&Kernel =Gaussian&0.0772  :  13.94\%&0.0798 :14.41\%&0.0053& 0.077 : 13.94\%\\
+		\cline{1-8}
+		\hline
+		\multirow{5}{*}{}
+		&&Elastic Net&${\alpha}$=1e-05,Iter=10000,l1Ratio=1&0.04782:8.47\%&0.059 :10.48\%&0.00469&0.059 :10.46\% \\
+		\cline{3-8}
+		&&Lasso&${\alpha}$=1e-05,iIter=10000&0.0479:8.49\%&0.0588 : 10.42\%& 0.0047&0.058 :10.44\% \\
+		\cline{3-8}
+		Économie&{1239x283}&Ridge&${\alpha}$=1 ,solver=cholesky&0.0492 :8.72\% &0.0573 : 10.16\%& 0.0047&0.058: 10.41\% \\
+		\cline{3-8}
+		&&LinearSVR&Kernel=linear&0.050 :8.87\%&0.063 :11.16\%&0.0055& 0.0647 :11.464 \%\\
+		\cline{3-8}
+		&&RbfSVR&Kernel =Gaussian&0.061 :10.95\%&0.0631 : 11.18\%&0.0036& 0.06545: 11.58\%\\
+		\cline{1-8}
+		\hline
+		\multirow{5}{*}{}
+		&&Ridge&${\alpha}$=1 ,solver=cholesky&0.05 : 9\% &0.067: 11.53\%& 0.00454&0.071 : 12.31\% \\
+		\cline{3-8}
+		&&Lasso&${\alpha}$=1e-05,iIter=10000&0.0485 : 8.36\%&0.07 : 12.06\%&0.0036&  0.074: 12.79\%\\
+		\cline{3-8}
+		Droit&897x 297&Elastic Net&${\alpha}$=1e-05,Iter=10000,l1Ratio=0.5&0.048:8.34\%&0.070
+		12.11\%
+		&0.0035& 0.0742 : 12.79\%\\
+		\cline{3-8}
+		&&LinearSVR&kernel=linear&0.052:8.95\%&0.075 :13.045\%&0.00637&0.0740 :12.75\%\\
+		\cline{3-8}
+		&&RbfSVR&Kernel =Gaussian&0.067:11.52\%&0.068 : 11.8\% &0.006& 0.0721 : 12.43\%\\
+		\cline{1-8}
+		\hline
+		\multirow{5}{*}{}
+		&&Ridge&${\alpha}$=1 ,solver=cholesky&0.0521: 8.98\% &0.065, 11.07\% & 0.0071&0.063:10.67\% \\
+		\cline{3-8}
+		&&Lasso&${\alpha}$=1e-05,iIter=10000&0.0485:8.36\%&0.069 : 11.82\%&0.0065& 0.065:11.077\%\\
+		\cline{3-8}
+		Santé&750 x 256&Elastic Net&${\alpha}$=1e-05,Iter=10000,l1Ratio=1&0.048 : 8.23\%&0.069 :11.87\% &0.005&0.065 : 11.12\% \\
+		\cline{3-8}
+		&&LinearSVR&kernel=linear&0.052 : 8.95\%&0.073: 12.51\%& 0.009&0.069 :11.83\% \\
+		\cline{3-8}
+		&&RbfSVR&Kernel =Gaussian&0.067 : 11.52\%&0.071 : 12.15\%&0.0052&0.0671 : 11.4\% \\
+		\cline{1-8}
+		\hline
+		\multirow{5}{*}{}
+		&&Elastic Net&${\alpha}$=1e-05,Iter=10000,l1Ratio=0.5&0.048 : 8.13\%&0.078 : 13.13\%&0.021&0.071 : 11.98\% \\
+		\cline{3-8}
+		&&Lasso&${\alpha}$=1e-05,iIter=10000&0.0485 :  8.14\%&0.078:13.13\%&0.020& 0.0712:11.96\%\\
+		\cline{3-8}
+		Psychologie&227x119&Ridge&${\alpha}$=1 ,solver=cholesky&0.051:8.57\% &0.073:12.36\%&0.018& 0.066 : 11.19\%\\
+		\cline{3-8}
+		&&LinearSVR&kernel=linear&0.0533 :8.950\%&0.082 :  13.89\%&0.0197& 0.077 : 12.92\%\\
+		\cline{3-8}
+		&&RbfSVR&Kernel =Gaussian&0.069 : 11.73\%&0.076:12.877\%& 0.014&0.066: 11.20\% \\
+		\cline{1-8}
+		\hline
+		\multirow{5}{*}{}
+		&&Elastic Net&${\alpha}$=1e-05,Iter=10000,l1Ratio=1&0.033: 5.32\%&0.07:12.42\%&0.0214&0.068 : 11.12\% \\
+		\cline{3-8}
+		&&Lasso&${\alpha}$=1e-05,iIter=10000&0.033 :  5.32\%&0.076 :  12.3\%&0.021& 0.068 :11.113\%\\
+		\cline{3-8}
+		Théologie&227x119&Ridge&${\alpha}$=1 ,solver=cholesky&0.0406 : 6.55\% &0.064 : 10.43\%& 0.0198& 0.062 : 10.118\%\\
+		\cline{3-8}
+		&&LinearSVR&kernel=linear&0.042 : 6.73\%&0.085 : 13.8\%& 0.015&0.086 :14.01\% \\
+		\cline{3-8}
+		&&RbfSVR&Kernel =Gaussian&0.065 : 10.479\%&0.067: 10.94\%&0.013&0.07488 : 12.078\% \\
+		\cline{1-8}
+		\hline
+	\end{tabular}}}
+	\endgroup
+\end{table}
+\newpage
+Comme nous pouvons le remarquer dans ce tableau , après entrainement et évaluation de nos modèles sur nos 2 ensemble d'apprentissages et en validation croisée les 3 premiers modèles linéaire donnent presque les même résultats et sont plus performants comparé aux modèles \ac{SVM} dans la plus part de cas avec un score dans le 12\% sur nos ensembles d'évaluation, mais avons pu le remarquer la prédiction du \ac{CGPA} est beaucoup plus influencer par le pourcentage du diplôme d'état car ils sont dans la même échelle, les valeur de l'école de provenance et de l'option ont une influence minime lors de cette prédiction !Nous allons maintenant essayer d'améliorer a précision de notre modèle en utilisant  une technique des méthodes d'ensemble appelée le stacking.
+\subsubsection{Méthodes d'ensembles}
+il a été souligné par différents auteur \cite{bookSckit-Learn} que combiner les résultat des plusieurs modèles de régressions donnent des meilleurs résultats qu'un seul modèle c'est pourquoi nous avions choisi de combiner nos 5 modèles pour obtenir un bon modèle finale ,.
+Nous avons donc décider de combiner ces résultats finales prédites par les  les 5 modèles par une régressions pour trouver le résultats finale de nos modèles .Et Notre erreur a peu être réduite à la fois sur le training et le test set dans toutes les facultés , voici au tableau \ref{tab:ensembleResults} les différentes erreurs au sein de chaque faculté .
+\begin{table}[!htbp]
+\centering
+\begingroup % make the next setting local
+\captionsetup{type=table} % here we want to caption a table
+\caption{Résultats de nos Modèle après application des méthodes d'ensembles }
+\label{tab:ensembleResults}
+\begin{tabular}{|c|c|c|}
+	\toprule
+	Faculté &   RMSE Train  &RMSE Test \\
+	\midrule
+	Médecine &7.045\%&9.951\%\\
+	Technologie&11.174\%&12.86\%\\
+	Économie &8.453& 10.065\%\\
+	Droit &8.344\%&11.76 \%\\
+	Santé&8.21\%&9.96\%\\
+	Psychologie&6.601\%&10.564\%\\
+	Théologie&5.32\%&9.093\% \\
+	\bottomrule
+\end{tabular}
+\endgroup
+\end{table}
