finsihed the conclusion and adding table of content

--- a/Text/introduction.tex
+++ b/Text/introduction.tex
@@ -26,11 +26,13 @@ Mais aussi l'intérêt scientifique de ce travail sera de fournir un outil de ba
 Nous avons choisi de parler de l'orientation des étudiants car durant notre parcours universitaire nous avons constaté un fort taux d'abandon et d'échec due à une mauvaise orientation et ainsi nous voulions aider tant soit peut à résoudre ce problème. 
 \section{Hypothèses de Travail}
 Une hypothèse est  une supposition qui est faite en réponse à une question de recherche. \cite{MethFr} \\
-Pour notre travail nous supposerons que les universités ainsi disposent d'une énorme quantité des données et qu'on peut les analyser enfin d'y découvrir des patterns cachés qui peuvent nous permettre de prédire l'orientation d'un nouvel étudiant sur base de ses résultats à l'école secondaire.     
+Pour notre travail nous supposerons que les universités ainsi disposent d'une énorme quantité des données et qu'on peut les analyser enfin d'y découvrir des patterns cachés qui peuvent nous permettre de prédire l'orientation d'un nouvel étudiant sur base de ses résultats à l'école secondaire.  \\
+- Dans ce travail nous avions prédit la moyenne des points \ac{CGPA}qu'un étudiant peut obtenir au cours de son cursus académique  dans chaque faculté sur bases des informations qu'il dispose à son inscription et le proposé une orientation en se basant sur les résultat prédits. \\
+- Pour y arriver nous avions utiliser différentes techniques du data-mining entre autre les statistiques descriptives , inférentielle , et différents algorithmes du Machine Learning pour analyser les données et découvrir les variables qui influencent la réussite d'un nouveau étudiant à l'université
 \section{Objectifs du travail}
 L'objectif d’une recherche se divise en deux parties: l'objectif général concerne la contribution que les chercheurs espèrent apporter en étudiant un problème donné; les objectifs opérationnels concernent les activités que les chercheurs comptent mener en vue
 d'atteindre l'objectif général. \cite{MethFr} \\
-Pour notre travail l'objectif général sera de fournir un outil d'aide à la décision en nous basant sur les techniques du DataMining plus précisément les arbres de décisions et la technique du random forrest.\\
+Pour notre travail l'objectif général sera de fournir un outil d'aide à la décision en nous basant sur les techniques du DataMining plus précisément différents modèles de régression linéaires régularisé. \\
 Cet outil se présentera sous forme de service web de type \ac{REST} que les universités peuvent intégrer facilement dans leurs systèmes d'informations.
 \section{Méthodes et Techniques de Recherche}
 Pour atteindre notre objectif,notre  travail utilisera la méthodologie de \ac{CRISP-DM} qui est le processus standard d’un projet DataMining, elle définit les étapes pour la conduite d’un projet en le rendant plus efficace plus rapide et moins couteux. \cite{DMProces}  \\
@@ -42,6 +44,5 @@ Hormis l'introduction et la conclusion ce travail sera subdivisé en cinq chapit
 	\item Le premier chapitre sera intitulé: Les généralités sur le DataMining.
 	\item Le Second sera intitulé : Analyse du domaine de l'orientation.
 	\item Le troisième sera intitulé : Présentation et exploitation des données obtenus. 
-	\item Le quatrième sera intitulé : Conception ,développement et Présentation de notre Solution.
-	\item le Cinquième sera intitulé : Planification du Projet .
+	\item Le quatrième sera intitulé : Élaboration  et évaluation du modèle de prédiction.
 \end{enumerate}
