--- a/text/chapter4.tex
+++ b/text/chapter4.tex
@@ -97,102 +97,107 @@ Le tableau qui va suivre décrira les différentes algorithmes que nous avions e
 \begin{table} 
 	\begingroup % make the next setting local
 	\captionsetup{type=table} % here we want to caption a table
-	\caption{Résultat des Algorithmes }
+	\caption{Résultat des Algorithmes 1 ere iteration }
 	\label{tab:AlgoResults}
+	\noindent
+	{\resizebox*{\textwidth}{\textheight}{%
+			\renewcommand{\arraystretch}{2}
+			\begin{tabular}{|c|c|c|c|c|c|c|c|}
+				\toprule
+				\multirow{6}{*}{} Faculté & Dimensions &Modèle &RMSE Train &\multicolumn{2}{c|}{CV Score}&RMSE Test &       STACK\_RES  \\
+				\cline{5-6}
+				&&&&M&std&& \\
+				\cline{1-8}
+				        &              &  ElasticNet &  0.06 : 11.14\% &  0.080  : 14.46\% &       0,0051 &  0.08 : 14.198\% &                  \\ \cline{3-8}
+				&              &       Ridge &  0.07 : 11.83\% &  0.080  : 14.37\% &       0,0054 &  0.08 : 13.667\% &                  \\ \cline{3-8}
+				FSTA &   (903, 240) &   LinearSVR &  0.06 : 11.51\% &  0.080  : 14.48\% &       0,0055 &  0.08 : 13.803\% &  0.062 : 11.132\% \\ \cline{3-8}
+				&              &         SVR &  0.08 : 14.02\% &  0.080  : 14.44\% &       0,0058 &  0.08 : 13.667\% &                  \\ \cline{3-8}
+				&              &       Lasso &  0.06 : 11.15\% &  0.082  : 14.85\% &       0,0072 &  0.08 : 14.151\% &                  \\ \cline{1-8}
+				&              &  ElasticNet &   0.03 : 4.64\% &  0.079  : 12.70\% &       0,0223 &  0.08 : 12.247\% &                  \\ \cline{3-8}
+				&              &       Ridge &   0.05 : 7.59\% &  0.088  : 14.13\% &       0,0122 &  0.10 : 15.534\% &                  \\ \cline{3-8}
+				FT &   (140, 105) &   LinearSVR &   0.04 : 6.42\% &  0.085  : 13.69\% &       0,0129 &  0.09 : 14.646\% &   0.029 : 4.639\% \\ \cline{3-8}
+				&              &         SVR &   0.06 : 9.88\% &  0.065  : 10.50\% &       0,0114 &  0.07 : 10.973\% &                  \\ \cline{3-8}
+				&              &       Lasso &   0.03 : 4.65\% &  0.113  : 18.25\% &       0,0434 &  0.08 : 12.398\% &                  \\ \cline{1-8}
+				&              &  ElasticNet &   0.05 : 8.43\% &  0.059  : 10.41\% &       0,0052 &  0.06 : 10.638\% &                  \\ \cline{3-8}
+				&              &       Ridge &   0.05 : 9.19\% &  0.063  : 11.14\% &       0,0074 &  0.06 : 11.226\% &                  \\ \cline{3-8}
+				FSEG &  (1549, 286) &   LinearSVR &   0.05 : 8.85\% &  0.063  : 11.15\% &       0,0082 &  0.06 : 11.270\% &   0.048 : 8.426\% \\ \cline{3-8}
+				&              &         SVR &  0.06 : 10.92\% &  0.063  : 11.10\% &       0,0060 &  0.06 : 11.160\% &                  \\ \cline{3-8}
+				&              &       Lasso &   0.05 : 8.46\% &  0.065  : 11.49\% &       0,0124 &  0.07 : 11.993\% &                  \\ \cline{1-8}
+				&              &  ElasticNet &   0.05 : 8.01\% &  0.067  : 11.41\% &       0,0069 &  0.07 : 11.800\% &                  \\ \cline{3-8}
+				&              &       Ridge &   0.06 : 9.34\% &  0.073  : 12.35\% &       0,0081 &  0.07 : 11.782\% &                  \\ \cline{3-8}
+				FSDC &   (758, 257) &   LinearSVR &   0.05 : 8.87\% &  0.074  : 12.50\% &       0,0083 &  0.07 : 11.892\% &   0.047 : 8.007\% \\ \cline{3-8}
+				&              &         SVR &  0.07 : 11.92\% &  0.072  : 12.22\% &       0,0037 &  0.07 : 12.353\% &                  \\ \cline{3-8}
+				&              &       Lasso &   0.05 : 8.03\% &  0.081  : 13.78\% &       0,0206 &  0.07 : 11.711\% &                  \\ \cline{1-8}
+				&              &  ElasticNet &   0.05 : 8.34\% &  0.070  : 12.04\% &       0,0068 &  0.08 : 13.020\% &                  \\ \cline{3-8}
+				&              &       Ridge &   0.05 : 9.46\% &  0.074  : 12.73\% &       0,0092 &  0.07 : 12.882\% &                  \\ \cline{3-8}
+				FD &   (896, 300) &   LinearSVR &   0.05 : 8.95\% &  0.074  : 12.78\% &       0,0097 &  0.08 : 13.022\% &   0.048 : 8.333\% \\ \cline{3-8}
+				&              &         SVR &  0.07 : 11.54\% &  0.069  : 11.90\% &       0,0052 &  0.07 : 12.251\% &                  \\ \cline{3-8}
+				&              &       Lasso &   0.05 : 8.36\% &  0.078  : 13.52\% &       0,0140 &  0.08 : 12.991\% &                  \\ \cline{1-8}
+				&              &  ElasticNet &   0.04 : 7.80\% &  0.066  : 11.51\% &       0,0090 &  0.07 : 11.362\% &                  \\ \cline{3-8}
+				&              &       Ridge &   0.05 : 8.78\% &  0.068  : 11.77\% &       0,0131 &  0.07 : 12.984\% &                  \\ \cline{3-8}
+				FM &   (242, 111) &   LinearSVR &   0.05 : 8.28\% &  0.067  : 11.57\% &       0,0118 &  0.07 : 12.974\% &   0.045 : 7.798\% \\ \cline{3-8}
+				&              &         SVR &  0.07 : 11.62\% &  0.070  : 12.05\% &       0,0120 &  0.07 : 12.493\% &                  \\ \cline{3-8}
+				&              &       Lasso &   0.04 : 7.80\% &  0.068  : 11.73\% &       0,0098 &  0.08 : 14.448\% &                  \\ \cline{1-8}
+				&              &  ElasticNet &   0.04 : 7.49\% &  0.081  : 13.62\% &       0,0082 &  0.06 : 10.747\% &                  \\ \cline{3-8}
+				&              &       Ridge &   0.06 : 9.49\% &  0.089  : 14.90\% &       0,0159 &  0.07 : 11.120\% &                  \\ \cline{3-8}
+				FPSE &   (227, 119) &   LinearSVR &   0.05 : 8.60\% &  0.088  : 14.73\% &       0,0137 &  0.07 : 10.989\% &   0.045 : 7.488\% \\ \cline{3-8}
+				&              &         SVR &  0.07 : 12.23\% &  0.079  : 13.20\% &       0,0086 &  0.06 : 10.422\% &                  \\ \cline{3-8}
+				&              &       Lasso &   0.04 : 7.49\% &  0.087  : 14.56\% &       0,0213 &  0.06 : 10.618\% &                  \\ \cline{1-8}
+	\end{tabular}}}
+	\endgroup
+\end{table}
+\newpage
+
+\begin{table} 
+	\begingroup % make the next setting local
+	\captionsetup{type=table} % here we want to caption a table
+	\caption{Résultat des Algorithmes }
+	\label{tab:AlgoResults2}
 	\noindent
 	{\resizebox*{\textwidth}{\textheight}{%
 			\renewcommand{\arraystretch}{2}
 	\begin{tabular}{|c|c|c|c|c|c|c|c|}
 		\toprule
-		\multirow{6}{*}{} Faculté & Dimensions &Modèle&Paramètres &RMSE Train &\multicolumn{2}{c|}{CV Score}&RMSE Test  \\
-		\cline{6-7}
-		&&&&&M&std& \\
+		\multirow{6}{*}{} Faculté & Dimensions &Modèle &RMSE Train &\multicolumn{2}{c|}{CV Score}&RMSE Test &       STACK\_RES  \\
+		\cline{5-6}
+		&&&&M&std&& \\
 		\cline{1-8}
 		\hline
-		&&Ridge&alpha=1 , solver=cholesky &0.047:8\%&0.064:11\%&0.01&0.066:11.42\% \\
-		&&Lasso&${\alpha}$=1e-05,iIter=10000&0.040 :  7.04\%&0.0640 :11.11\%&0.008& 0.068 : 11.93\%\\
-		\cline{3-8}
-		Médecine&{242 x 111 }&Elastic Net&${\alpha}$=1e-05, Iter=10000, l1Ratio=1&0.040 : 7.04\%&0.0641:11.115\%&0.0089&0.069 :11.97\% \\
-		\cline{3-8}
-		&&LinearSVR&Kernel=Linear&0.044:7.7\%&0.066:11\%&0.01& 0.08 : 13\%\\
-		\cline{3-8}
-		&&RbfSVR&Kernel = Gaussian&0.06788 :  11.76\%&0.0712:12.35\%&0.0084&0.062 : 10.74\% \\
-		\cline{1-8}
-		\hline
-		\multirow{5}{*}{}
-		&&Elastic Net&${\alpha}$=1e-05,Iter=10000,l1Ratio=1&0.078 :14.2\%&0.080 :14.54\%&0.0067& 0.078 : 14.21\%\\
-		\cline{3-8}
-		&&Lasso&${\alpha}$=1e-05,iIter=10000&0.0784 : 14.15\%&0.080 :14.49\%& 0.006&0.0784 : 14.15\% \\
-		\cline{3-8}
-		Technologie&{903x240}&Ridge&${\alpha}$=1 ,solver=cholesky&0.076 :13.83\% &0.07732 : 13.95\%&0.0066&0.076: 13.83\% \\
-		\cline{3-8}
-		&&LinearSVR&kernel=linear&0.0774 : 13.97\%&0.081:14.75\%&0.006& 0.077 :13.97\%\\
-		\cline{3-8}
-		&&RbfSVR&Kernel =Gaussian&0.0772  :  13.94\%&0.0798 :14.41\%&0.0053& 0.077 : 13.94\%\\
-		\cline{1-8}
-		\hline
-		\multirow{5}{*}{}
-		&&Elastic Net&${\alpha}$=1e-05,Iter=10000,l1Ratio=1&0.04782:8.47\%&0.059 :10.48\%&0.00469&0.059 :10.46\% \\
-		\cline{3-8}
-		&&Lasso&${\alpha}$=1e-05,iIter=10000&0.0479:8.49\%&0.0588 : 10.42\%& 0.0047&0.058 :10.44\% \\
-		\cline{3-8}
-		Économie&{1239x283}&Ridge&${\alpha}$=1 ,solver=cholesky&0.0492 :8.72\% &0.0573 : 10.16\%& 0.0047&0.058: 10.41\% \\
-		\cline{3-8}
-		&&LinearSVR&Kernel=linear&0.050 :8.87\%&0.063 :11.16\%&0.0055& 0.0647 :11.464 \%\\
-		\cline{3-8}
-		&&RbfSVR&Kernel =Gaussian&0.061 :10.95\%&0.0631 : 11.18\%&0.0036& 0.06545: 11.58\%\\
-		\cline{1-8}
-		\hline
-		\multirow{5}{*}{}
-		&&Ridge&${\alpha}$=1 ,solver=cholesky&0.05 : 9\% &0.067: 11.53\%& 0.00454&0.071 : 12.31\% \\
-		\cline{3-8}
-		&&Lasso&${\alpha}$=1e-05,iIter=10000&0.0485 : 8.36\%&0.07 : 12.06\%&0.0036&  0.074: 12.79\%\\
-		\cline{3-8}
-		Droit&897x 297&Elastic Net&${\alpha}$=1e-05,Iter=10000,l1Ratio=0.5&0.048:8.34\%&0.070
-		12.11\%
-		&0.0035& 0.0742 : 12.79\%\\
-		\cline{3-8}
-		&&LinearSVR&kernel=linear&0.052:8.95\%&0.075 :13.045\%&0.00637&0.0740 :12.75\%\\
-		\cline{3-8}
-		&&RbfSVR&Kernel =Gaussian&0.067:11.52\%&0.068 : 11.8\% &0.006& 0.0721 : 12.43\%\\
-		\cline{1-8}
-		\hline
-		\multirow{5}{*}{}
-		&&Ridge&${\alpha}$=1 ,solver=cholesky&0.0521: 8.98\% &0.065, 11.07\% & 0.0071&0.063:10.67\% \\
-		\cline{3-8}
-		&&Lasso&${\alpha}$=1e-05,iIter=10000&0.0485:8.36\%&0.069 : 11.82\%&0.0065& 0.065:11.077\%\\
-		\cline{3-8}
-		Santé&750 x 256&Elastic Net&${\alpha}$=1e-05,Iter=10000,l1Ratio=1&0.048 : 8.23\%&0.069 :11.87\% &0.005&0.065 : 11.12\% \\
-		\cline{3-8}
-		&&LinearSVR&kernel=linear&0.052 : 8.95\%&0.073: 12.51\%& 0.009&0.069 :11.83\% \\
-		\cline{3-8}
-		&&RbfSVR&Kernel =Gaussian&0.067 : 11.52\%&0.071 : 12.15\%&0.0052&0.0671 : 11.4\% \\
-		\cline{1-8}
-		\hline
-		\multirow{5}{*}{}
-		&&Elastic Net&${\alpha}$=1e-05,Iter=10000,l1Ratio=0.5&0.048 : 8.13\%&0.078 : 13.13\%&0.021&0.071 : 11.98\% \\
-		\cline{3-8}
-		&&Lasso&${\alpha}$=1e-05,iIter=10000&0.0485 :  8.14\%&0.078:13.13\%&0.020& 0.0712:11.96\%\\
-		\cline{3-8}
-		Psychologie&227x119&Ridge&${\alpha}$=1 ,solver=cholesky&0.051:8.57\% &0.073:12.36\%&0.018& 0.066 : 11.19\%\\
-		\cline{3-8}
-		&&LinearSVR&kernel=linear&0.0533 :8.950\%&0.082 :  13.89\%&0.0197& 0.077 : 12.92\%\\
-		\cline{3-8}
-		&&RbfSVR&Kernel =Gaussian&0.069 : 11.73\%&0.076:12.877\%& 0.014&0.066: 11.20\% \\
-		\cline{1-8}
-		\hline
-		\multirow{5}{*}{}
-		&&Elastic Net&${\alpha}$=1e-05,Iter=10000,l1Ratio=1&0.033: 5.32\%&0.07:12.42\%&0.0214&0.068 : 11.12\% \\
-		\cline{3-8}
-		&&Lasso&${\alpha}$=1e-05,iIter=10000&0.033 :  5.32\%&0.076 :  12.3\%&0.021& 0.068 :11.113\%\\
-		\cline{3-8}
-		Théologie&227x119&Ridge&${\alpha}$=1 ,solver=cholesky&0.0406 : 6.55\% &0.064 : 10.43\%& 0.0198& 0.062 : 10.118\%\\
-		\cline{3-8}
-		&&LinearSVR&kernel=linear&0.042 : 6.73\%&0.085 : 13.8\%& 0.015&0.086 :14.01\% \\
-		\cline{3-8}
-		&&RbfSVR&Kernel =Gaussian&0.065 : 10.479\%&0.067: 10.94\%&0.013&0.07488 : 12.078\% \\
-		\cline{1-8}
-		\hline
+		&              &  ElasticNet &   0.05 : 9.51\% &  0.069  : 12.25\% &       0,0046 &  0.07 : 12.089\% &                 \\ \cline{3-8}
+		&              &       Ridge &  0.06 : 10.26\% &  0.071  : 12.49\% &       0,0050 &  0.07 : 12.020\% &                 \\ \cline{3-8}
+		FSTA &   (903, 243) &   LinearSVR &   0.06 : 9.95\% &  0.071  : 12.56\% &       0,0052 &  0.07 : 12.102\% &  0.054 : 9.510\% \\ \cline{3-8}
+		&              &         SVR &  0.07 : 12.51\% &  0.072  : 12.77\% &       0,0042 &  0.07 : 12.063\% &                 \\ \cline{3-8}
+		&              &       Lasso &   0.05 : 9.53\% &  0.072  : 12.83\% &       0,0079 &  0.07 : 12.516\% &                 \\ \cline{1-8}
+		&              &  ElasticNet &   0.03 : 4.19\% &  0.073  : 11.76\% &       0,0172 &  0.07 : 11.178\% &                 \\ \cline{3-8}
+		&              &       Ridge &   0.04 : 7.06\% &  0.083  : 13.40\% &       0,0116 &  0.09 : 14.854\% &                 \\ \cline{3-8}
+		FT &   (140, 105) &   LinearSVR &   0.04 : 5.91\% &  0.080  : 12.92\% &       0,0114 &  0.09 : 13.885\% &  0.026 : 4.190\% \\ \cline{3-8}
+		&              &         SVR &   0.06 : 8.96\% &   0.058  : 9.40\% &       0,0092 &   0.06 : 9.961\% &                 \\ \cline{3-8}
+		&              &       Lasso &   0.03 : 4.20\% &  0.106  : 17.02\% &       0,0400 &  0.07 : 11.334\% &                 \\ \cline{1-8}
+		&              &  ElasticNet &   0.04 : 7.07\% &   0.050  : 8.69\% &       0,0040 &   0.05 : 8.532\% &                 \\ \cline{3-8}
+		&              &       Ridge &   0.05 : 7.90\% &   0.055  : 9.70\% &       0,0060 &   0.05 : 9.584\% &                 \\ \cline{3-8}
+		FSEG &  (1549, 286) &   LinearSVR &   0.04 : 7.55\% &   0.055  : 9.68\% &       0,0072 &   0.05 : 9.540\% &  0.040 : 7.060\% \\ \cline{3-8}
+		&              &         SVR &   0.05 : 8.84\% &   0.051  : 8.92\% &       0,0038 &   0.05 : 8.757\% &                 \\ \cline{3-8}
+		&              &       Lasso &   0.04 : 7.10\% &  0.057  : 10.00\% &       0,0126 &  0.06 : 10.197\% &                 \\ \cline{1-8}
+		&              &  ElasticNet &   0.04 : 6.36\% &   0.054  : 9.02\% &       0,0046 &   0.06 : 9.319\% &                 \\ \cline{3-8}
+		&              &       Ridge &   0.05 : 7.75\% &  0.062  : 10.36\% &       0,0069 &   0.06 : 9.740\% &                 \\ \cline{3-8}
+		FSDC &   (758, 257) &   LinearSVR &   0.04 : 7.30\% &  0.062  : 10.45\% &       0,0068 &   0.06 : 9.752\% &  0.038 : 6.360\% \\ \cline{3-8}
+		&              &         SVR &   0.05 : 9.18\% &   0.055  : 9.27\% &       0,0037 &   0.06 : 9.616\% &                 \\ \cline{3-8}
+		&              &       Lasso &   0.04 : 6.38\% &  0.069  : 11.56\% &       0,0209 &   0.06 : 9.243\% &                 \\ \cline{1-8}
+		&              &  ElasticNet &   0.04 : 7.12\% &  0.060  : 10.33\% &       0,0049 &  0.06 : 10.561\% &                 \\ \cline{3-8}
+		&              &       Ridge &   0.05 : 8.24\% &  0.066  : 11.25\% &       0,0084 &  0.06 : 11.065\% &                 \\ \cline{3-8}
+		FD &   (896, 300) &   LinearSVR &   0.05 : 7.75\% &  0.066  : 11.29\% &       0,0088 &  0.07 : 11.116\% &  0.042 : 7.113\% \\ \cline{3-8}
+		&              &         SVR &   0.06 : 9.96\% &  0.060  : 10.16\% &       0,0039 &  0.06 : 10.145\% &                 \\ \cline{3-8}
+		&              &       Lasso &   0.04 : 7.14\% &  0.071  : 12.08\% &       0,0143 &  0.06 : 10.541\% &                 \\ \cline{1-8}
+		&              &  ElasticNet &   0.04 : 6.13\% &   0.054  : 9.24\% &       0,0077 &   0.06 : 9.624\% &                 \\ \cline{3-8}
+		&              &       Ridge &   0.04 : 7.26\% &  0.059  : 10.08\% &       0,0138 &  0.07 : 11.986\% &                 \\ \cline{3-8}
+		FM &   (242, 111) &   LinearSVR &   0.04 : 6.73\% &   0.057  : 9.81\% &       0,0127 &  0.07 : 11.948\% &  0.036 : 6.131\% \\ \cline{3-8}
+		&              &         SVR &   0.05 : 9.43\% &   0.056  : 9.56\% &       0,0075 &  0.06 : 10.759\% &                 \\ \cline{3-8}
+		&              &       Lasso &   0.04 : 6.14\% &   0.057  : 9.82\% &       0,0118 &  0.08 : 14.068\% &                 \\ \cline{1-8}
+		&              &  ElasticNet &   0.04 : 6.42\% &  0.070  : 11.62\% &       0,0070 &   0.06 : 9.411\% &                 \\ \cline{3-8}
+		&              &       Ridge &   0.05 : 8.49\% &  0.081  : 13.47\% &       0,0157 &   0.06 : 9.866\% &                 \\ \cline{3-8}
+		FPSE &   (227, 119) &   LinearSVR &   0.05 : 7.61\% &  0.079  : 13.19\% &       0,0135 &   0.06 : 9.664\% &  0.039 : 6.421\% \\ \cline{3-8}
+		&              &         SVR &  0.06 : 10.62\% &  0.067  : 11.20\% &       0,0079 &   0.05 : 8.951\% &                 \\ \cline{3-8}
+		&              &       Lasso &   0.04 : 6.42\% &  0.076  : 12.70\% &       0,0221 &   0.05 : 9.114\% &                 \\ \cline{1-8}
 	\end{tabular}}}
 	\endgroup
 \end{table}
