--- a/memoire.tex
+++ b/memoire.tex
@@ -28,7 +28,7 @@ sorting=none]{biblatex}
 % for making the table looks goods
 \usepackage{lscape}
 \usepackage[table]{xcolor}
-\definecolor{skyblue}{RGB}{150,194,255}
+\definecolor{skyblue}{RGB}{175,200,255}
 \definecolor{darkblue}{RGB}{2,40,94}
 \newcommand\litem[1]{\item{\bfseries #1,\enspace}}
 \usepackage[margin=2.5cm,left=2.5cm,
@@ -37,7 +37,7 @@ top=2.5cm,right=2.5cm,bottom=2.5cm]{geometry}
 \usepackage{graphicx}
 \usepackage{multirow}
 \usepackage{colortbl}
-\allsectionsfont{\color{darkblue}}
+\allsectionsfont{\color{skyblue}}
 \newcolumntype{R}{>{\leavevmode\ignorespaces\rmfamily\bfseries}p{2cm}}%
 \newcolumntype{H}{>{\leavevmode\ignorespaces\raggedright\arraybackslash\rmfamily}X}%
 \newcolumntype{J}{>{\leavevmode\ignorespaces\rmfamily}X}%
@@ -59,5 +59,9 @@ top=2.5cm,right=2.5cm,bottom=2.5cm]{geometry}
 \input{text/secondChapiter.tex}\cleardoublepage
 \input{text/chapter3.tex}\cleardoublepage
 \input{text/chapter4.tex}\cleardoublepage
+\input{text/conclusion.tex}\cleardoublepage
 \printbibliography
+\tableofcontents
+\listoffigures
+\listoftables
 \end{document}
